--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "accordion-js": "^3.3.4",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
