--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "accordion-js": "^3.3.4",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "swiper": "^9.3.2"
   },
